--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
     "scroll"
   ],
   "author": "Eugene Kopich <github@web2033.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": "web2033/trigger"
 }
