--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@web2033/trigger",
   "version": "1.1.1",
   "description": "Wrapper for Intersection Observer API (beta). For personal use.",
-  "main": "trigger.min.js",
+  "main": "trigger.js",
   "scripts": {
     "prepublishOnly": "terser trigger.js --compress --mangle --output trigger.min.js"
   },
