--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@web2033/trigger",
   "version": "1.1.4",
-  "description": "Wrapper for Intersection Observer API (beta). For personal use.",
+  "description": "Wrapper for Intersection Observer API. Easy way to lazy-load images, trigger animation or run javascript function.",
   "main": "trigger.js",
   "scripts": {
     "prepublishOnly": "terser trigger.js --compress --mangle --output trigger.min.js"
