--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "@web2033/trigger",
   "version": "1.1.7",
-  "type": "module",
   "description": "Wrapper for Intersection Observer API. Easy way to lazy-load images, trigger animation or run javascript function.",
-  "main": "trigger.js",
+  "source": "src/trigger.js",
+  "main": "dist/trigger.js",
+  "module": "dist/trigger.es.js",
+  "umd:main": "dist/trigger.min.js",
+  "scripts": {
+    "prepublishOnly": "npm run build",
+    "build": "rimraf dist && microbundle --no-sourcemap",
+    "dev": "microbundle watch --no-sourcemap"
+  },
   "keywords": [
     "trigger",
     "aos",
@@ -16,5 +23,9 @@
   ],
   "author": "Eugene Kopich <github@web2033.com>",
   "license": "MIT",
-  "repository": "web2033/trigger"
+  "repository": "web2033/trigger",
+  "devDependencies": {
+    "microbundle": "^0.12.0",
+    "rimraf": "^3.0.2"
+  }
 }
