--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "source": "src/trigger.js",
   "main": "dist/trigger.js",
   "module": "dist/trigger.es.js",
-  "umd:main": "dist/trigger.min.js",
+  "unpkg": "dist/trigger.min.js",
   "scripts": {
     "prepublishOnly": "npm run build",
     "build": "rimraf dist && microbundle --no-sourcemap",
@@ -25,7 +25,7 @@
   "license": "MIT",
   "repository": "web2033/trigger",
   "devDependencies": {
-    "microbundle": "^0.12.0",
+    "microbundle": "^0.12.4",
     "rimraf": "^3.0.2"
   }
 }
